--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
+  <title>Testimonials Page Grid</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -16,6 +20,7 @@
 </head>
 <body>
   <div id="daniel">
+    <img class="quotation" src="./images/bg-pattern-quotation.svg" alt="quotation mark">
     <img src="./images/image-daniel.jpg" alt="daniel">
   <h5>Daniel Clifford</h5>
   <p class="role">Verified Graduate</p>
@@ -98,8 +103,8 @@
 
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+     
+    Coded by <a href="https://github.com/Jriera">Jordi Riera</a>.
   </div>
 </body>
 </html>
